syntax = "proto3";

package user;




service PostService{
    rpc CreatePost(Post) returns (Post);
    rpc UpdatePost(Post) returns (Post);
    rpc GetPostById(WithId) returns(Post);
    rpc GetAllPosts(Empty) returns (Posts);
    rpc DeletePostById(WithId) returns (Post);
    rpc GetAllUserPosts(WithId) returns (Posts);
    rpc DeleteAllUserPosts(WithId) returns (Posts);
    rpc StarPosts(Empty) returns (Posts);
    rpc GetPostsSortPrice(PriceSep) returns (Posts); 
    rpc GetingPostsByColor(ColorReq) returns (Posts);
    
    rpc GetPostByPrice(GetPostPriceReq) returns (Posts);

    rpc GetPostByCategory(CatID) returns (Posts);
    rpc GetAllCategories(Empty) returns(Categories);
    rpc CreateCategory(CategoryReq) returns (Category);
    rpc DeleteCategory(CatID) returns (Category);
    rpc GetCategory(CatID) returns (Category);

    rpc PutLike(Like) returns(Like);
    rpc TakeLike(WithId) returns (Like);
    rpc GetAllPostLikesUser(WithId) returns (Likes);
    rpc GetLikeInfo(LikeId) returns (Like);
    rpc GetPostLike(WithId) returns(Likes);
}

message ColorReq {
    string color =1;
}

message GetPostPriceReq{
    string low=1;
    string high=2;
}

message PutLikeReq{
    string user_id=1;
    string post_id=2;
}

message Like {
    string id =1;
    string user_id=2;
    string post_id=3;
    string created_at=4;
}

message LikeId{
    string id = 1;
}

message Likes{
    repeated Like Likes=1;
}
message CategoryReq{
    string post_id=1;
    string name=2;
}
message Category{
    string id =1;
    string post_id=2;
    string name=3;
    string created_at =4;
    string updated_at =5;
    string deleted_at=6;
}
message Categories{
    repeated Category Categories=1;
}
message CatID{
    string id=1;
}


message PriceSep{
    bool high=1;
}

message WithId{
    string id =1;
}

message Empty{

}

message Post{
    string id =1;
    string title =2;
    string description = 3;
    string body=4;
    string author_id =5;
    string stars=6;
    string rating = 7;
    string price = 8;
    string product_type=9;
    repeated string size =10;
    string color =11;
    string gen=12;
    string created_at=13;
    string updated_at=14;
    string deleted_at=15;

}

message Posts{
    repeated Post Posts=1;
}
